added videos page

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body {
 <div class="sidenav">
   <a href="index.html">Home</a>
   <a href="events.html">Events</a>
-  <a href="donators">Donators</a>
-  <a href="">Videos</a>
+  <a href="donators.html">Donators</a>
+  <a href="videos.html">Videos</a>
   <a href="#contact"></a>
 </div>
 
