--- a/videos.html
+++ b/videos.html
@@ -73,16 +73,16 @@ h1 {color: brown;
 </style>
 
 <body>
-<center><h1>Any upcoming events will be posted on this page!</h1></center>
+<center><h1>Any videos posted about the ThunderDome will be found here</h1>
 <hr>
-<p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
-</br>2/26/2018 Team Deathmatch Event [NukeTown 2018 Theme]
-</br>Prize : Something
-</br> Teleports will be issued by Shogun. Bring no guns.
-
-
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/0MO6IFSna8E">
+</iframe>
+</br> <p1>First test event recorded by the event creator and host, SpitfireZ
 <hr>
-Discord : https://discord.gg/YKsVsQx
-</br>YouTube : yes
-
-</body>
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/DiIQOzGJBhw">
+</iframe>
+</br>Another event recorded by SpitfireZ
