fixed donators page loop issue

--- a/donators.html
+++ b/donators.html
@@ -47,9 +47,8 @@ body {
 <div class="sidenav">
   <a href="index.html">Home</a>
   <a href="events.html">Events</a>
-  <a href="donators">Donators</a>
-  <a href="#contact">Videos</a>
-  <a href="#contact"></a>
+  <a href="donators.html">Donators</a>
+  <a href="videos.html">Videos</a>
 </div>
 
 <style>
