added donators page

--- a/donators.html
+++ b/donators.html
@@ -70,3 +70,11 @@ h1 {color: brown;
     }
 
 </style>
+
+
+<body>
+<center><h1>List of generous donators</h1></center>
+<hr>
+<p1><center>These are the people who've been generous and donated to the ThunderDome. These events would not be able to happen
+</br> without the generous donations from these amazing players: 
+</br>•Daton</br>Galaxysnacks</br>AJ</br>Cobra</br>Serge</br>Datrox</br>John Carter</br>Enflict
