updated donators page

--- a/donators.html
+++ b/donators.html
@@ -73,7 +73,7 @@ h1 {color: brown;
 
 
 <body>
-<center><h1>List of generous donators</h1></center>
+<center><h1>List of donators to the Dome</h1></center>
 <hr>
 <p1><center>These are the people who've been generous and donated to the ThunderDome. These events would not be able to happen
 </br> without the generous donations from these amazing players: 
