--- a/donators.html
+++ b/donators.html
@@ -78,4 +78,10 @@ h1 {color: brown;
 <p1><center>These are the people who've been generous and donated to the ThunderDome. These events would not be able to happen
 </br> without the generous donations from these amazing players: 
 </br>•Daton</br>•Galaxysnacks</br>•AJ</br>•Cobra</br>•Serge</br>•Datrox</br>•John Carter</br>•Enflict
+
+<hr>
+<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+
+
 </body>
