--- a/events.html
+++ b/events.html
@@ -81,7 +81,7 @@ h1 {color: brown;
 
 
 <hr>
-Discord : https://discord.gg/YKsVsQx
-</br>YouTube : yes
+<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
 
 </body>
