--- a/videos.html
+++ b/videos.html
@@ -85,3 +85,11 @@ src="https://www.youtube.com/embed/0MO6IFSna8E">
 src="https://www.youtube.com/embed/DiIQOzGJBhw">
 </iframe>
 </br>Another event recorded by SpitfireZ
+
+
+
+<hr>
+<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+
+</body>
