--- a/videos.html
+++ b/videos.html
@@ -53,7 +53,9 @@ body {
 
 <style>
 body {
-        background-image: url("pic.png");
+        background-image: url("pic.png");    
+		background-repeat: no-repeat;
+        background-attachment: fixed;
 } 
  p1 { 
       Color: white
