--- a/events.html
+++ b/events.html
@@ -80,8 +80,8 @@ h1 {color: brown;
 <center><h1>Any upcoming events will be posted on this page!</h1></center>
 <hr>
 <p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
-</br>2/26/2018 Team Deathmatch Event [NukeTown 2018 Theme]
-</br>Prize : Something
+</br>2/26/2018 Free for All Event [NukeTown 2018 Theme]</br>
+</br>Prize(s) : Little Bird and a Humvee
 </br> Teleports will be issued by Shogun. Bring no guns.
 
 
