--- a/videos.html
+++ b/videos.html
@@ -89,7 +89,13 @@ src="https://www.youtube.com/embed/0MO6IFSna8E">
 src="https://www.youtube.com/embed/DiIQOzGJBhw">
 </iframe>
 </br>Another event recorded by SpitfireZ
+<hr>
 
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/EPchmsl23_I">
+</iframe>
+</br>Video recorded by John Carter
 
 
 <hr>
