--- a/events.html
+++ b/events.html
@@ -80,10 +80,10 @@ h1 {color: brown;
 <center><h1>Any upcoming events will be posted on this page!</h1></center>
 <hr>
 <p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
-</br>3/2or this week?
-/2018</br>
-</br>Prize(s) : Little Bird and a Humvee
-</br> Teleports will be issued by Shogun. Bring no guns.
+</br>4/13/2018
+</br>
+</br>Prize(s) : 
+</br> Teleports will be issued by Shogun. Gear will also be provided. Bring nothing.
 
 
 <hr>
