changed discord link

--- a/donators.html
+++ b/donators.html
@@ -84,7 +84,7 @@ h1 {color: brown;
 </br>•Daton</br>•Galaxysnacks</br>•AJ</br>•Cobra</br>•Serge</br>•Datrox</br>•John Carter</br>•Enflict
 
 <hr>
-<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
 </br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
 
 
