--- a/videos.html
+++ b/videos.html
@@ -97,9 +97,23 @@ src="https://www.youtube.com/embed/EPchmsl23_I">
 </iframe>
 </br>Video recorded by John Carter
 
+<hr>
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/JerLoLTqUtE">
+</iframe>
+</br>Video recorded by SpitFireZ
 
 <hr>
-<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/68NiVkyNXqY">
+</iframe>
+</br>Video recorded by SpitFireZ
+
+<hr>
+<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
 </br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
 
 </body>
