--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ to be the best PvP'er out of 20 people!</br></br>The different gamemods in the D
 These rules are fairly unrestrictive, but consist of:</br>•Obey and respect Dome Staff</br>•Do not shoot until round starts</br>•Do not camp outside the Dome
 </br>•Do not loot dead bodies</br>•Do not take anything out of supply tents</br> 
 </br>Any violations of these rules will be punished by server admins.</br> Yes, this event is 'Admin Sponsored'. 
-So think twice.</br></br>If you have any questions or concerns, please send them to an Event Manager or Host in our Discord server!
+So think twice.</br></br>If you have any questions or concerns, please send them to SpitFireZ or Muggles in the INS Discord server!
 
 
 <hr>
-<a href="https://discord.gg/YKsVsQx"><p1><u>Discord</a>
+<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
 </br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
 
 </center></p1>
