--- a/videos.html
+++ b/videos.html
@@ -93,9 +93,9 @@ src="https://www.youtube.com/embed/DiIQOzGJBhw">
 
 </br>
 <iframe width="420" height="315"
-src="https://www.youtube.com/embed/EPchmsl23_I">
+src="https://www.youtube.com/embed/q12eoD97L5A">
 </iframe>
-</br>Video recorded by John Carter
+</br>Video recorded by SpitFireZ
 
 <hr>
 </br>
@@ -111,6 +111,12 @@ src="https://www.youtube.com/embed/JerLoLTqUtE">
 src="https://www.youtube.com/embed/68NiVkyNXqY">
 </iframe>
 </br>Video recorded by SpitFireZ
+
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/EPchmsl23_I">
+</iframe>
+</br>Video recorded by John Carter
 
 <hr>
 <a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
