--- a/donators.html
+++ b/donators.html
@@ -81,7 +81,7 @@ h1 {color: brown;
 <hr>
 <p1><center>These are the people who've been generous and donated to the ThunderDome. These events would not be able to happen
 </br> without the generous donations from these amazing players: 
-</br>•Daton</br>•Galaxysnacks</br>•AJ</br>•Cobra</br>•Serge</br>•Datrox</br>•John Carter</br>•Enflict
+</br>•Daton</br>•Galaxysnacks</br>•AJ</br>•Cobra</br>•Serge</br>•Datrox</br>•John Carter</br>•Enflict</br>•Gargamel
 
 <hr>
 <a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
