--- a/events.html
+++ b/events.html
@@ -82,7 +82,10 @@ h1 {color: brown;
 <p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
 </br>4/13/2018
 </br>
-</br>Prize(s) : 
+</br>1v1 COD style on a map made of shipping containers.
+</br>
+</br>Prize(s) : A humvee filled with industrial loot and weapons
+</br>
 </br> Teleports will be issued by Shogun. Gear will also be provided. Bring nothing.
 
 
