--- a/index.html
+++ b/index.html
@@ -77,15 +77,36 @@ h1 {color: brown;
 <body>
 <center><h1>The Official Website for the ThunderDome INS Server Event</h1></center>
 <hr>
-<p1><center>Welcome to the official website of the ThunderDome! Here you will find all the info you need to understand what the ThunderDome is.<br/>
-The ThunderDome is a PvP event that takes place at an arena just west of the town of Pavlovo.<br/>You may participate in this event to earn prizes, such as:</br>•Rare Weapons
-<br/>•Helis<br/>•Cars<br/>•Bricks<br/></br>Not only can you get these amazing items, you can also get the satisfaction of knowing</br>that you proved yourself
-to be the best PvP'er out of 20 people!</br></br>The different gamemods in the Dome consist of:</br>•Team Deathmatch</br>•Free for All
-</br>•Capture the Flag</br>•1v1's</br> </br>Just like any event, there are rules. 
-These rules are fairly unrestrictive, but consist of:</br>•Obey and respect Dome Staff</br>•Do not shoot until round starts</br>•Do not camp outside the Dome
-</br>•Do not loot dead bodies</br>•Do not take anything out of supply tents</br> 
-</br>Any violations of these rules will be punished by server admins.</br> Yes, this event is 'Admin Sponsored'. 
-So think twice.</br></br>If you have any questions or concerns, please send them to SpitFireZ or Muggles in the INS Discord server!
+<p1><center>Welcome to the official website of the ThunderDome! Here you will find all the info you need to understand what the ThunderDome is.
+<br/>The ThunderDome is a PvP event that takes place at an arena just west of the town of Pavlovo.<br/>You may participate in this event to earn prizes, such as:
+</br>•Rare Weapons
+<br/>•Helis
+<br/>•Cars
+<br/>•Bricks
+<br/>
+</br>Not only can you get these amazing items, you can also get the satisfaction of knowing
+</br>that you proved yourself
+to be the best PvP'er out of 20 people!
+</br>
+</br>The different gamemods in the Dome consist of:
+</br>•Team Deathmatch
+</br>•Free for All
+</br>•Capture the Flag
+</br>•1v1's
+</br> 
+</br>Just like any event, there are rules. 
+These rules are fairly unrestrictive, but consist of:
+</br>•Obey and respect Dome Staff
+</br>•Do not shoot until round starts
+</br>•Do not camp outside the Dome
+</br>•Do not loot dead bodies
+</br>•Do not take anything out of supply tents
+</br> 
+</br>Any violations of these rules will be punished by server admins.
+</br> Yes, this event is 'Admin Sponsored'. 
+So think twice.
+</br>
+</br>If you have any questions or concerns, please send them to SpitFireZ or Muggles in the INS Discord server!
 
 
 <hr>
