--- a/videos.html
+++ b/videos.html
@@ -112,6 +112,16 @@ src="https://www.youtube.com/embed/68NiVkyNXqY">
 </iframe>
 </br>Video recorded by SpitFireZ
 
+<hr>
+
+</br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/oXT35oCUEuI">
+</iframe>
+</br>Video recorded by SpitFireZ
+
+<hr>
+
 </br>
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/EPchmsl23_I">
