--- a/events.html
+++ b/events.html
@@ -82,7 +82,7 @@ h1 {color: brown;
 <p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
 </br>4/20/2018
 </br>
-</br>(Event posted this Tuesday)
+</br>2vs2 Hershel's Farm hostage rescue
 </br>
 </br>Prize(s) : (Not yet confirmed)
 </br>
