random noone cares

--- a/donators.html
+++ b/donators.html
@@ -84,8 +84,8 @@ h1 {color: brown;
 </br>•Daton</br>•Galaxysnacks</br>•AJ</br>•Cobra</br>•Serge</br>•Datrox</br>•John Carter</br>•Enflict</br>•Gargamel
 
 <hr>
-<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
-</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+<a href="https://discord.gg/2HXSRnN" target="_blank"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ" target="_blank"><p1><u>YouTube</a>
 
 
 </body>
