--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@ h1 {color: brown;
 
 
 <hr>
-<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
-</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+<a href="https://discord.gg/2HXSRnN" target="_blank"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ" target="_blank"><p1><u>YouTube</a>
 
 </body>
