--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ So think twice.
 
 
 <hr>
-<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
-</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+<a href="https://discord.gg/2HXSRnN" target="_blank"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ" target="_blank"><p1><u>YouTube</a>
 
 </center></p1>
 
