--- a/videos.html
+++ b/videos.html
@@ -129,7 +129,7 @@ src="https://www.youtube.com/embed/EPchmsl23_I">
 </br>Video recorded by John Carter
 
 <hr>
-<a href="https://discord.gg/2HXSRnN"><p1><u>Discord</a>
-</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ"><p1><u>YouTube</a>
+<a href="https://discord.gg/2HXSRnN" target="_blank"><p1><u>Discord</a>
+</br><a href="https://www.youtube.com/channel/UCMpu52XlcJQ3QAIswpWRgDQ" target="_blank"><p1><u>YouTube</a>
 
 </body>
