--- a/events.html
+++ b/events.html
@@ -80,11 +80,11 @@ h1 {color: brown;
 <center><h1>Any upcoming events will be posted on this page!</h1></center>
 <hr>
 <p1><center>All events begin at exactly 9 PM EST. So be prepared at least a half an hour before any event starts!<hr>
-</br>4/20/2018
+</br>4/27/2018
 </br>
-</br>2vs2 Hershel's Farm hostage rescue
+</br>1vs1 Zombie Pit fight with Melee Weapons
 </br>
-</br>Prize(s) : (Not yet confirmed)
+</br>Prize(s) : Black SUV
 </br>
 </br> Teleports will be issued by Shogun. Gear will also be provided. Bring nothing.
 
