--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ These rules are fairly unrestrictive, but consist of:
 </br> Yes, this event is 'Admin Sponsored'. 
 So think twice.
 </br>
-</br>If you have any questions or concerns, please send them to SpitFireZ or Muggles in the INS Discord server!
+</br>If you have any questions or concerns, please send them to Shogun, Muggles, or John Carter in the INS Discord server!
 
 
 <hr>
